# ithaca

./: .gitignore  README.md
kernel/: Cargo.toml  linker.ld
kernel/.cargo/: config.toml
kernel/src/: address_space.rs  boot.rs  hhdm.rs  interrupts.rs  kernel_alloc.rs  main.rs  pmm.rs  serial_port.rs  spinlock.rs  types.rs  vmm.rs  x86_64.rs
kernel/src/address_space/: x86_64.rs
kernel/src/dbg/: backtrace.rs
kernel/src/interrupts/: x86_64.rs
kernel/src/x86_64/: hpet.rs  idt.rs  interrupts.rs  local_apic.rs  pic.rs  pit.rs  segment.rs
kernel/src/x86_64/apic/: local.rs
xtask/: Cargo.toml
xtask/src/: main.rs
