[package]
name = "kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
acpi = "4.1.1"
atomic = "0.6.0"
bitflags = { version = "2.4.0", features = ["bytemuck"] }
bitfrob = "1.3.1"
bytemuck = { version = "1.13.1", features = ["derive", "min_const_generics", "zeroable_atomics", "zeroable_maybe_uninit"] }
limine = "0.1.11"
log = { version = "0.4.20", default-features = false }
owo-colors = "3.5.0"
spin = "0.9.8"
talc = "2.2.2"
unwinding = { version = "0.2.0", default-features = false, features = ["unwinder"] }
